<resources>
    <string name="new_version_message">Welcome to Sentinel\n\nSentinel is your deposit only bitcoin wallet. Sentinel cannot send bitcoin. Scan any XPUB and Sentinel will keep watch, alerting you of any new incoming transactions and allowing you to create new addresses so you can receive bitcoin on your mobile device.\n\nSentinel is the easiest and most secure way to keep track and receive payments to your cold storage wallet.\n\nSentinel can\'t send bitcoin out of your wallet, and your private keys are never communicated with Sentinel in any way.</string>
    <string name="decrypting_bip38">Decrypting BIP38 password. Please wait...</string>
    <string name="app_title">Sentinel</string>
    <string name="action_send">Send</string>
    <string name="action_stealth_send">Stealth send</string>
    <string name="action_receive">Receive</string>
    <string name="action_tx">Transactions</string>
    <string name="action_settings">Settings</string>
    <string name="about_us">About Sentinel</string>
    <string name="about_title">About us</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="options_cat_prefs">Preferences</string>
    <string name="options_cat_wallet">Your wallet</string>
    <string name="options_cat_offline">Offline transactions</string>
    <string name="options_cat_other">Sentinel</string>
    <string name="options_currency">Street price</string>
    <string name="options_currency2">The fiat price from a selected exchange.</string>
    <string name="options_blockexplorer">Block explorer</string>
    <string name="options_blockexplorer2">The block explorer used to view transaction details.</string>
    <string name="options_export">Export wallet</string>
    <string name="options_export2">Export wallet and metadata.</string>
    <string name="options_restore">Restore wallet</string>
    <string name="options_restore2">Restore wallet and metadata from backup.</string>
    <string name="options_haptic">Haptic Feedback</string>
    <string name="options_haptic_2">Haptics enhance interactions and convey useful information to users through the sense of touch.</string>
    <string-array name="address_types">
        <item>Segwit native (bech32)</item>
        <item>Segwit compatibility (P2SH)</item>
        <item>Legacy (P2PKH)</item>
    </string-array>
    <string name="timeline_today">Today</string>
    <string name="timeline_yesterday">Yesterday</string>
    <string name="timeline_older">Older</string>
    <string name="you_received">You received</string>
    <string name="you_sent">You sent</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="send_payment_code">Send payment code</string>
    <string name="ask_you_sure_exit">Are you sure you want to exit Sentinel?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pin_5_8">Please create a PIN code between 5 and 8 characters. You will need this PIN to access Sentinel on this device.</string>
    <string name="pin_5_8_confirm">Please confirm 5-8 digit PIN code</string>
    <string name="pin_error">Pin code error</string>
    <string name="no_internet">No Internet connectivity. Please try again.</string>
    <string name="bip38_pw">BIP38 password</string>
    <string name="bip38_pw_error">BIP38 password error</string>
    <string name="please_select">Please select...</string>
    <string name="pin_enter">Enter PIN code</string>
    <string name="please_wait">Please wait...</string>
    <string name="wallet_restored_ko">Error restoring wallet.</string>
    <string name="address_used_previously">This receive address has been used previously.</string>
    <string name="scan">Scan</string>
    <string name="manual">Manual</string>
    <string name="tx_ok">Transaction sent</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="receive_address_to_clipboard">Copy this receive address to the clipboard? If copied, it may be visible to other applications.</string>
    <string name="receive_address_to_share">Share this receive address? If shared, it may be read to other applications.</string>
    <string name="sure_to_delete">Are you sure you want to delete this entry?</string>
    <string name="enter_xpub">Enter XPUB or bitcoin address.</string>
    <string name="xpub_error">There was an error creating a wallet from your XPUBs/bitcoin addresses. Please try again.</string>
    <string name="create_pin">Create PIN code</string>
    <string name="confirm_pin">Confirm PIN code</string>
    <string name="entering_stealth">Applying PIN code. Please wait.</string>
    <string name="error_activating_stealth">Error activating stealth launch. If the error persists, reinstall Sentinel.</string>
    <string name="options_scramble_pin">Scramble PIN entry</string>
    <string name="options_scramble_pin2">Use scrambled numerical pad to enter Sentinel.</string>
    <string name="options_pin">User PIN code</string>
    <string name="options_pin2">User PIN code to enter Sentinel.</string>
    <string name="options_broadcast_hex">Broadcast transaction hex</string>
    <string name="options_broadcast_hex2">Broadcast signed transaction supplied in hex format.</string>
    <string name="watchlist">Watchlist</string>
    <string name="deposit">Deposit</string>
    <string name="xpub_label">Label</string>
    <string name="new_account">New account</string>
    <string name="total_title">Total</string>
    <string name="deposit_into">Deposit into...</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="invalid_password">Please use a password containing at least 6 characters.</string>
    <string name="export_to_clipboard">Export to clipboard</string>
    <string name="export_to_email">Export to email</string>
    <string name="error_password">The proposed passwords do not match. Please try again.</string>
    <string name="encryption_error">There was an error while encrypting your wallet backup. Please try again.</string>
    <string name="encrypted_backup">Encrypted wallet data</string>
    <string name="decryption_error">There was an error while decrypting your wallet backup. Please try again.</string>
    <string name="restore_wallet_from_backup">Restore wallet from backup</string>
    <string name="choose_email_client">Choose an Email client:</string>
    <string name="bip32_account">BIP32 account</string>
    <string name="bip44_account">BIP44/49 account</string>
    <string name="bip49_account">BIP49 account</string>
    <string name="bip84_account">BIP84 account</string>
    <string name="base58_error">Unrecognized format</string>
    <string name="invalid_entry">Invalid XPUB or bitcoin address</string>
    <string name="unknown_xpub">XPUB depth</string>
    <string name="action_sweep">Sweep Private Key</string>
    <string name="enter_privkey">Enter private key</string>
    <string name="cannot_recognize_privkey">Cannot recognize private key</string>
    <string name="cannot_sweep_privkey">Error sweeping private key</string>
    <string name="pushtx_returns_null">Spend failed. Server returned null value.</string>
    <string name="xpub_add_ok">XPUB added successfully</string>
    <string name="xpub_add_ko">XPUB add failed</string>
    <string name="select_bitcoin_address1">Bitcoin Address</string>
    <string name="select_bitcoin_address2">single bitcoin address</string>
    <string name="select_bip44_xpub1">Bitcoin Wallet</string>
    <string name="select_bip44_xpub2">bitcoin wallet via XPUB (BIP44)</string>
    <string name="select_bip49_xpub1">Segwit Bitcoin Wallet</string>
    <string name="select_bip49_xpub2">bitcoin wallet via Segwit YPUB/ZPUB (BIP49/84)</string>
    <string name="track_new">Track new…</string>
    <string name="received_bitcoin">Received Bitcoin</string>
    <string name="bitcoin_address">bitcoin address</string>
    <string name="bech32_address">bech32 bitcoin address</string>
    <string name="start">Start</string>
    <string name="get_started">Get Started</string>
    <string name="add_first_address">Add any Bitcoin address or XPUB and Sentinel will be activated</string>
    <string name="tx_length_error">Samourai does not handle transactions over 100KB in size. Please try splitting your transaction.</string>
    <string name="tx_hex">Transaction hex</string>
    <string name="enter_tx_hex">Enter transaction in hex format</string>
    <string name="broadcast_transaction">Broadcast transaction</string>
    <string name="address">Address</string>
    <string name="select_network">Select network…</string>
    <string name="MainNet">MainNet</string>
    <string name="TestNet">TestNet</string>
    <string name="permission_alert_dialog_title_camera">Requesting camera permission</string>
    <string name="permission_dialog_message_camera">Sentinel needs access to the camera so it can scan QR codes.</string>
    <string name="permission_alert_dialog_title_notifications">Requesting notification permission</string>
    <string name="permission_dialog_message_notifications">Sentinel needs access to push notifications to show Tor status and incoming txs.</string>
    <string name="is_offline">Samourai is offline</string>
    <string name="history_will_be_updated">Balance and transaction history will not be updated until a working data connection is established</string>
    <string name="you_received_s">You received</string>
    <string name="paynym_follow_message">This fee covers the cost of creating a special  type of transaction on the blockchain.  This keeps PayNym decentralized</string>
    <string name="paynym_follow_fee_message">A one time connection fee of   will be charged to follow contact</string>
    <string name="initializing_tor">initializing Tor…</string>
    <string name="renew">RENEW</string>
    <string name="in_offline_mode">Sentinel is in offline mode.</string>
    <string name="dojo_headline">Power Sentinel with your Dojo</string>
    <string name="preorder">Preorder</string>
    <string name="plug_and_play_full_bitcoin_node_automatically">- Plug and Play\n\n -Automatically configured Tor hidden service\n\n -Independence from other servers</string>
    <string name="connect_to_existing_dojo">Connect to Dojo</string>
    <string name="dojo_connect_instruction">If you already have a Dojo Full Node or are \nrunning the free and open source Dojo Software\non your own hardware, scan the pairing QR code\nlocated on the Dojo Maintenance control panel</string>
    <string name="powering_sentinel">Connecting to your own Dojo full node offers the best level of privacy and independence when interfacing with the Bitcoin network.</string>
    <string name="disable">Disable</string>
    <string name="disable_dojo">Change/Disable</string>
    <string name="dojo_pairing_details" translatable="false">Details</string>
    <string name="Enabled">Enabled</string>
    <string name="community_dojo_browse_button" translatable="false">Browse Community Dojos (Dojo Bay)</string>
    <string name="community_dojo_warning_title" translatable="false">Privacy warning</string>
    <string name="setting_summary_displaySecure">Treat the content of the window as secure, preventing it from appearing in screenshots or from being viewed on non-secure displays</string>
    <string name="show_qr_code">SHOW QR CODE</string>
    <string name="launch_qr_scanner">LAUNCH QR SCANNER</string>
    <string name="step1">Step 1</string>
    <string name="step1_text">Display the QR code of this unsigned transaction and scan it with your wallet</string>
    <string name="step2">Step 2</string>
    <string name="step2_text">Scan the QR code of the signed transaction that your wallet provides you with the Sentinel app</string>
</resources>