<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.samourai.sentinel.widgets.HorizontalStepsViewIndicator
        android:id="@+id/step_view"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="96dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

    </com.samourai.sentinel.widgets.HorizontalStepsViewIndicator>

    <TextView
        android:id="@+id/step1"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/step1"
        android:textColor="#9A9A9A"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_view" />

    <TextView
        android:id="@+id/step1_text"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/step1_text"
        android:textColor="#9A9A9A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/showQrCode"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/show_qr_code"
        android:textColor="@color/green"
        android:background="@color/disabled_grey"
        app:cornerRadius="8dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step1_text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/step2"
        android:textColor="#9A9A9A"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showQrCode" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/step2_text"
        android:textColor="#9A9A9A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/launchQRScanner"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:background="@color/disabled_grey"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/launch_qr_scanner"
        android:textColor="@color/blue"
        app:cornerRadius="8dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>