<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:title="Wallet">

        <CheckBoxPreference
            app:icon="@drawable/ic_baseline_lock_24"
            app:key="pinEnabled"
            app:summaryOff="User PIN code disabled"
            app:summaryOn="User PIN code enabled"
            app:title="User PIN code" />

        <CheckBoxPreference
            app:title="@string/options_scramble_pin"
            android:summary="@string/options_scramble_pin2"
            app:dependency="pinEnabled"
            app:key="scramblePin" />

        <CheckBoxPreference
            android:title="@string/options_haptic"
            android:summary="@string/options_haptic_2"
            app:dependency="pinEnabled"
            android:key="haptic"
            android:defaultValue="false" />

        <CheckBoxPreference
            app:key="fiatDisabled"
            app:summaryOff="Fiat values showing"
            app:summaryOn="Fiat values not showing"
            app:title="Hide fiat values" />



    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:title="Exchange Settings">
        <ListPreference
            app:key="exchangeSelection"
            app:title="Exchange"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="selectedCurrency"
            app:title="Currency"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <PreferenceCategory
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:title="Backup options">
        <Preference
            app:icon="@drawable/ic_file_export"
            app:key="export"
            app:title="Export Sentinel Backup" />

        <Preference
            app:icon="@drawable/ic_file_import"
            app:key="import"
            app:title="Import Sentinel Backup" />


    </PreferenceCategory>


    <PreferenceCategory
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:title="App Behavior">

        <CheckBoxPreference
            android:summary="@string/setting_summary_displaySecure"
            app:icon="@drawable/ic_baseline_screen_lock_portrait_24"
            app:key="displaySecure"

            app:title="Disable Screenshots" />

    </PreferenceCategory>
    <PreferenceCategory
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:title="About">

        <Preference
            app:summary="@string/version_name"
            app:title="Version" />

    </PreferenceCategory>
    <PreferenceCategory
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:title="Troubleshooting &amp; Debug">

        <Preference
            app:key="shareErrorLog"
            app:summary="Error file containing previously caught exceptions"
            app:title="Share error log" />

    </PreferenceCategory>

    <PreferenceCategory>

        <Preference
                app:icon="@drawable/ic_reset"
                app:key="clear"
                app:summary="Clear all collections and reset settings"
                app:title="Erase all Sentinel data" />

    </PreferenceCategory>

</PreferenceScreen>